# CppIdiom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
smart_pointers/: CMakeLists.txt
smart_pointers/shared_ptr/: shared_ptr.hpp  shared_ptr_base.hpp
test/: CMakeLists.txt  shared_ptr_tests.cpp
